# percolator-fish

./: .gitignore  LICENSE  README.md  pyproject.toml
data_output/: coffee_data.npz
src/percolator_fish/: __init__.py  data.py  fisher.py  model.py  plots.py
src/percolator_fish/scripts/: make_coffee_data.py  plot_coffee_data.py  plot_coffee_derivative_sensitivity.py  plot_full_forecast.py  plot_simple_forecast.py  plot_triangle_forecast.py  plot_two_param_forecast.py
