[project]
name = "percolator-fish"
version = "0.1.0"
description = "Coffee cooling Fisher forecast demo using DerivKit."
requires-python = ">=3.10"
dependencies = [
    "derivkit",
    "getdist",
    "matplotlib",
    "numpy",
]

[project.scripts]
percolator-data = "percolator_fish.scripts.plot_coffee_data:main"
percolator-two-param = "percolator_fish.scripts.plot_two_param_forecast:main"
percolator-full = "percolator_fish.scripts.plot_full_forecast:main"

[tool.ruff]
line-length = 88
